--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,24 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+window.addEventListener('keydown', function(e) {
+  const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+  const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+  if(!audio) return; // stop early
+  audio.currentTime = 0; // rewind audio element to start
+  audio.play();
+  key.classList.add('playing');
+});
 
+const keys = document.querySelectorAll('.key');
+keys.forEach(function(key) {
+  key.addEventListener('transitionend', removeTransition);
+});
+
+function removeTransition(e) {
+  if (e.propertyName !== 'transform') return; // skip if not transform
+  this.classList.remove('playing');
+}
 </script>
 
 
