--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -37,17 +37,28 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const fifteen = inventors.filter((inventor) => 
+    inventor.year >= 1500 && inventor.year < 1600);
+    console.table(fifteen);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const firstLast = inventors.map((inventor) => inventor.first + ' ' + inventor.last);
+    console.log(firstLast);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const sorted = inventors.sort((a, b) => a.year < b.year ? -1 : 1);
+    console.table(sorted);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const yearsLived = inventors.reduce((total, inventor) => total + (inventor.passed - inventor.year), 0);
+    console.log(yearsLived);
 
     // 5. Sort the inventors by years lived
+    const ordered = inventors.sort((a, b) => a.passed - a.year < b.passed - b.year ? -1 : 1);
+    console.table(ordered);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
@@ -55,10 +66,22 @@
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alphabetically  = people.sort((a, b) => {
+      firstPersonLastName = a.split(', ')[0];
+      secondPersonLastName = b.split(', ')[0];
+      return firstPersonLastName < secondPersonLastName ? -1 : 1;
+    });
+    console.log(alphabetically);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const sum = data.reduce((obj, vehicle) => {
+      vehicle in obj ? obj[vehicle] += 1 : obj[vehicle] = 1;
+      return obj;
+    }, {});
+    console.table(sum);
 
   </script>
 </body>
